--- a/custom_components/mattermost/translations/en.json
+++ b/custom_components/mattermost/translations/en.json
@@ -1,5 +1,4 @@
 {
-  "title": "Mattermost",
   "config": {
     "step": {
       "user": {
@@ -18,12 +17,12 @@
       }
     },
     "error": {
-      "cannot_connect": "[%key:common::config_flow::error::cannot_connect%]",
-      "invalid_auth": "[%key:common::config_flow::error::invalid_auth%]",
-      "unknown": "[%key:common::config_flow::error::unknown%]"
+      "cannot_connect": "Unable to connect to Mattermost server",
+      "invalid_auth": "Invalid bot token or authentication failed",
+      "unknown": "An unexpected error occurred during setup"
     },
     "abort": {
-      "already_configured": "[%key:common::config_flow::abort::already_configured_device%]"
+      "already_configured": "This Mattermost server is already configured"
     }
   }
 }
